--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <head>
       <div></div>
-      <h1></h1>
+      <h1>Hello World of Sammar</h1>
     </head>
     <div>
       <div></div>
