--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Find the Truth</title>
+    <link href="./css/main.css" rel="stylesheet" type="text/css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -20,19 +20,27 @@
   </head>
 
   <body>
-    <head>
-      <div></div>
-      <h1>Hello World of Sammar</h1>
-    </head>
-    <div>
-      <div></div>
-      <div></div>
+    <div class="sidenav">
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#clients">Clients</a>
+      <a href="#contact">Contact</a>
     </div>
-    <footer></footer>
-    <nav class="navbar navbar-dark bg-primary">
-      <!-- Navbar content -->
-    </nav>
 
-    <script src="script.js"></script>
+    <div class="main">
+      <div class="navbar">
+        <a class="" href="#">Home</a>
+        <a class="" href="#">Topics</a>
+        <a class="" href="#">References</a>
+      </div>
+      <hr />
+      <h1>Collection of References for my Kids</h1>
+
+      <div id="displayDiv"></div>
+    </div>
+
+    <footer>Dedicated to Imam-e-Zamana (alaihis-salam)</footer>
+    <script src="./file/json.txt"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
