added references and css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a class="" href="#">References</a>
       </div>
       <hr />
-      <h1>Collection of References for my Kids</h1>
+      <h1 id="headingID">Collection of Haq</h1>
 
       <div id="displayDiv"></div>
     </div>
