--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>Find the Truth</title>
     <link href="./css/main.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -29,14 +33,42 @@
 
     <div class="main">
       <div class="navbar">
-        <a class="" href="#">Home</a>
-        <a class="" href="#">Topics</a>
-        <a class="" href="#">References</a>
+        <div class="homeBtnColor">
+          <button class="btn" id="homeButtonID">
+            <i class="fa fa-home"></i> Home
+          </button>
+        </div>
+
+        <div class="search-container">
+          <input
+            type="text"
+            placeholder="Search By Topic"
+            name="search"
+            id="searchTopicID"
+          />
+          <button type="submit" id="searchTopicButtonID">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
+
+        <div class="search-container">
+          <input
+            type="text"
+            placeholder="Search Any Where"
+            name="search"
+            id="searchAllID"
+          />
+          <button type="submit" id="searchAllButtonID">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
       </div>
       <hr />
       <h1 id="headingID">Collection of Haq</h1>
 
       <div id="displayDiv"></div>
+      <div id="displayReferenceDiv">hiya</div>
+      <div id="displayTopicDiv"></div>
     </div>
 
     <footer>Dedicated to Imam-e-Zamana (alaihis-salam)</footer>
