--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
   </head>
 
   <body>
-    <div class="sidenav">
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#clients">Clients</a>
-      <a href="#contact">Contact</a>
-    </div>
+    <div class="sidenav" id="sideNavID"></div>
 
     <div class="main">
       <div class="navbar">
