add: events tab

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           </button>
         </div>
 
+        <div class="homeBtnColor">
+          <button class="btn" id="eventButtonID">
+            <i class="fa fa-home"></i> Events
+          </button>
+        </div>
+
         <div class="search-container">
           <input
             type="text"
@@ -61,12 +67,15 @@
       <hr />
 
       <div id="displayDiv"></div>
-      <div id="displayReferenceDiv">hiya</div>
+      <div id="displayReferenceDiv"></div>
       <div id="displayTopicDiv"></div>
+      <div id="displayEventDiv"></div>
     </div>
 
     <footer>Dedicated to Imam-e-Zamana (alaihis-salam)</footer>
+
     <script src="./file/json.txt"></script>
+    <script src="./file/event.txt"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
