--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           </button>
         </div>
 
+        <button onclick="openDataPage()">View Data</button>
+
         <div class="homeBtnColor">
           <button class="btn" id="eventButtonID">
             <i class="fa fa-home"></i> Events
@@ -72,6 +74,13 @@
 
     <footer>Dedicated to Imam-e-Zamana (alaihis-salam)</footer>
 
+    <script>
+      function openDataPage() {
+          // Replace 'data.html' with the name of your data display page
+          window.open('data.html', '_blank');
+      }
+  </script>
+  
     <script src="./file/json.txt"></script>
     <script src="./file/event.txt"></script>
     <script src="./js/main.js"></script>
