--- a/data.html
+++ b/data.html
@@ -30,7 +30,7 @@
         // JavaScript code to fetch data from Google Sheets and display it in HTML
         const apiKey = 'AIzaSyDQLyrSMa6hJxKBTKop1reQN838WysT5MI'; // Replace with your actual API key
         const sheetId = '1wgoGu9Gv1y2VI086cPvJ-AblSyOWgWBKoHgjZ6a447k'; // Replace with your Google Sheet ID
-        const range = 'Sheet1!A1:D10'; // Adjust the range based on your sheet and data
+        const range = 'Sheet1!A1:G10'; // Adjust the range based on your sheet and data
 
         const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
 
