--- a/data.html
+++ b/data.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Islamic References from Google Sheets DataS</title>
+    <title>Islamic References from Google Sheets Data</title>
     <style>
         /* Optional styling for the table */
         table {
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <h1>Data from Google Sheets</h1>
+    <h1>Islamic References from Google Sheets Data</h1>
     <div id="sheetData">Loading data...</div>
 
     <script>
