now data will be shown in decending order

--- a/data.html
+++ b/data.html
@@ -46,7 +46,7 @@
                     table += "</tr>";
                     
                     // Data rows
-                    rows.slice(1).forEach(row => {
+                    rows.slice(1).reverse().forEach(row => {
                         table += "<tr>";
                         row.forEach(cell => (table += `<td>${cell}</td>`));
                         table += "</tr>";
