--- a/index.html
+++ b/index.html
@@ -114,10 +114,54 @@
 
     <script>
         // JavaScript functions for button clicks
-        function searchFunction() {
-            // Code for search functionality
-            alert("Search functionality coming soon!");
+        async function searchFunction() {
+            // Get the search text
+            const searchText = document.querySelector('input[type="text"]').value.trim();
+
+            if (!searchText) {
+                alert("Please enter a search term!");
+                return;
+            }
+
+            // Replace with your own Google Sheet ID and API key
+            const sheetId = '1wgoGu9Gv1y2VI086cPvJ-AblSyOWgWBKoHgjZ6a447k';
+            const apiKey = 'AIzaSyDQLyrSMa6hJxKBTKop1reQN838WysT5MI'; 
+            const sheetRange = 'Sheet1!A1:D1000'; // Adjust the range as needed
+
+            // Construct the API URL
+            const apiUrl = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${range}?key=${apiKey}`;
+
+            try {
+                // Fetch data from Google Sheets
+                const response = await fetch(apiUrl);
+                const data = await response.json();
+
+                if (!data.values) {
+                    alert("No data found!");
+                    return;
+                }
+
+                // Filter rows that match the search term
+                const rows = data.values;
+                const matchingRows = rows.filter(row => row.some(cell => cell.toLowerCase().includes(searchText.toLowerCase())));
+
+                if (matchingRows.length === 0) {
+                    alert("No matching data found!");
+                    return;
+                }
+
+                // Store matching rows in local storage for the next page
+                localStorage.setItem('searchResults', JSON.stringify(matchingRows));
+
+                // Navigate to the next page to display results
+                window.location.href = 'results.html'; // Adjust as needed
+
+            } catch (error) {
+                console.error("Error fetching data:", error);
+                alert("Error fetching data from Google Sheets!");
+            }
         }
+
 
         function goHome() {
             // Replace 'data.html' with the name of your data display page
