--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
     </header>
 
     <div class="search-container">
-        <input type="text" placeholder="Search...">
+        <button class="list-btn" onclick="navigateToListData()">List of References</button>
+
+        
         <button class="search-btn" onclick="searchFunction()">Search</button>
         <button class="list-btn" onclick="navigateToTopic()">Topics List</button>
         <button class="list-btn" onclick="navigateToList()">References List</button>
-        <button class="list-btn" onclick="navigateToListData()">List Data</button>
+        
     </div>
 
     <footer>
